--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ default: &default
   host: localhost
   pool: 5
   username: postgres
-  password: rjhegwbz12
+  password: rjkf,jhfwbjybcn19
  
 development:
   <<: *default
