--- a/.gitignore
+++ b/.gitignore
@@ -17,14 +17,14 @@
 
 # Ignore local configuration
 .rvmrc
-/config/database.yml
-/config/social_keys.yml
-/config/technomir.yml
-/config/elasticsearch.yml
-/config/config.yml
-/config/initializers/appconf.rb
-/config/secrets.yml
-/db/schema.rb
+#/config/database.yml
+#/config/social_keys.yml
+#/config/technomir.yml
+#/config/elasticsearch.yml
+#/config/config.yml
+#/config/initializers/appconf.rb
+#/config/secrets.yml
+#/db/schema.rb
 .rspec
 .rvmrc
 
